# football-dues-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  config.py  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml
database/: __init__.py  models.py  repo.py
handlers/: admin.py  comprovante.py  registro.py
jobs/: scheduler.py
scripts/: backdate_teste.py  resetar_db.py  validar_ocr_amostras.py
services/: cobranca.py  normalizacao.py  ocr.py  validador.py
tests/: conftest.py  fakes_telegram.py  test_cobranca.py  test_handler_admin.py  test_handler_comprovante.py  test_handler_registro.py  test_ocr.py  test_parse_valor.py  test_validacao_admin.py  test_validador.py
