[project]
name = "bot-telegram-fut"
version = "0.1.0"
description = "Bot do Telegram para gerenciar a mensalidade do futebol (cadastro, cobranca e OCR de comprovantes PIX)."
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
exclude = [".venv", "samples", ".claude"]
